feat: new page UI + db fixes + installer improvements

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -18,6 +18,7 @@
 @import '~xterm/dist/xterm.css';
 // @import 'node_modules/diff2html/dist/diff2html.min';
 
+@import 'pages/new';
 @import 'pages/welcome';
 @import 'pages/error';
 
