--- a/server/views/page.pug
+++ b/server/views/page.pug
@@ -13,7 +13,7 @@ block body
       created-at=page.createdAt
       updated-at=page.updatedAt
       author-name=page.authorName
-      author-id=page.authorId
+      :author-id=page.authorId
       is-published=page.isPublished
       )
       template(slot='contents')!= page.render
