fix: setup issues + webpack improvements

--- a/dev/templates/setup.pug
+++ b/dev/templates/setup.pug
@@ -7,7 +7,7 @@ html
     meta(name='theme-color', content='#333333')
     meta(name='msapplication-TileColor', content='#333333')
     meta(name='msapplication-TileImage', content='/favicons/ms-icon-144x144.png')
-    title= config.title
+    title Wiki.js Setup
 
     //- Favicon
     each favsize in [57, 60, 72, 76, 114, 120, 144, 152, 180]
@@ -19,7 +19,7 @@ html
 
     //- Site Lang
     script.
-      var siteConfig = !{JSON.stringify({ title: config.title, theme: config.theming.theme, darkMode: config.theming.darkMode, lang: config.lang.code })}
+      var siteConfig = !{JSON.stringify({ title: config.title })}
 
     //- CSS
     link(type='text/css', rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Roboto:400,500,700|Source+Code+Pro:400,700|Material+Icons')
@@ -59,7 +59,6 @@ html
       <% } %>
     <% } %>
 
-    block head
-
   body
-    block body
+    #root
+      setup(telemetry-id=telemetryClientID, wiki-version=packageObj.version)
