--- a/server/views/master.pug
+++ b/server/views/master.pug
@@ -24,10 +24,26 @@ html
     //- CSS
     link(type='text/css', rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Roboto:400,500,700|Source+Code+Pro:400,700|Material+Icons')
     link(type='text/css', rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css')
+    
+
+    //- JS
+    
+      
+    script(
+      type='text/javascript'
+      src='/js/runtime.js'
+      )
+      
+    
+      
+    script(
+      type='text/javascript'
+      src='/js/app.js'
+      )
+      
+    
 
     block head
 
-    script(type="text/javascript" src="/js/runtime.js")
-    script(type="text/javascript" src="/js/client.js")
   body
     block body
