--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -4,12 +4,15 @@
 @import "base/icons";
 
 @import "../libs/animate/animate";
+@import '~vue2-animate/src/sass/vue2-animate';
 
 @import 'components/markdown-content';
 @import 'components/v-btn';
 @import 'components/v-data-table';
 @import 'components/v-dialog';
 @import 'components/vue-tree-navigation';
+
+@import 'layout/md2';
 
 // @import '../libs/twemoji/twemoji-awesome';
 @import '../libs/prism/prism.css';
