--- a/server/views/editor.pug
+++ b/server/views/editor.pug
@@ -4,6 +4,7 @@ block body
   #root
     v-app
       editor(
+        :page-id=page.id
         locale=page.localeCode
         path=page.path
         title=page.title
