--- a/server/views/page.pug
+++ b/server/views/page.pug
@@ -14,6 +14,6 @@ block body
       updated-at=page.updatedAt
       author-name=page.authorName
       :author-id=page.authorId
-      is-published=page.isPublished
+      :is-published=page.isPublished
       )
       template(slot='contents')!= page.render
