--- a/server/views/page.pug
+++ b/server/views/page.pug
@@ -15,6 +15,7 @@ block body
       author-name=page.authorName
       :author-id=page.authorId
       :is-published=page.isPublished
+      :toc=page.toc
       )
       template(slot='sidebar')
         each navItem in sidebar
