fix: hide page actions when not applicable

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -88,9 +88,9 @@
   }
 
   code {
-    background-color: rgba(mc('pink', '500'), .1);
+    background-color: rgba(mc('indigo', '50'), 1);
     padding: 0 5px;
-    color: mc('pink', '800');
+    color: mc('indigo', '800');
     font-family: 'Source Code Pro', monospace;
     font-weight: normal;
     font-size: 1rem;
