--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -5,6 +5,7 @@
 
 @import "../libs/animate/animate";
 @import '~vue2-animate/src/sass/vue2-animate';
+@import '~diff2html/dist/diff2html.min.css';
 
 @import 'components/v-btn';
 @import 'components/v-data-table';
