feat: user menu + jwt certs + UI fixes

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -11,7 +11,7 @@
 @import 'components/v-btn';
 @import 'components/v-data-table';
 @import 'components/v-dialog';
-@import 'components/vue-tree-navigation';
+@import 'components/v-form';
 
 @import 'layout/md2';
 
