--- a/client/scss/pages/_new.scss
+++ b/client/scss/pages/_new.scss
@@ -1,5 +1,5 @@
 .newpage {
-  background: linear-gradient(to bottom, mc('blue', '900') 0%, mc('blue', '500') 100%);
+  background: linear-gradient(to bottom, darken(mc('blue', '900'), 10%) 0%, mc('purple', '500') 100%);
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -36,7 +36,7 @@
   &::after {
     content: '';
     position: absolute;
-    background-color: #0d47a1;
+    background-color: transparent;
     background-image: url('../static/svg/motif-overlay.svg');
     background-attachment: fixed;
     background-size: cover;
