feat: admin - manage groups + permissions + page rules

--- a/server/views/new.pug
+++ b/server/views/new.pug
@@ -5,7 +5,7 @@ block body
     v-app
       .newpage
         .newpage-content
-          img.animated.fadeIn(src='/svg/icon-close-window.svg', alt='Henry')
+          img.animated.fadeIn(src='/svg/icon-delete-file.svg', alt='Not Found')
           .headline= t('newpage.title')
           .subheading.mt-3= t('newpage.subtitle')
           v-btn.mt-5(href='/e' + pagePath, large)
