feat: page Rules access check

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -23,6 +23,7 @@
 // @import 'node_modules/diff2html/dist/diff2html.min';
 
 @import 'pages/new';
+@import 'pages/notfound';
 @import 'pages/unauthorized';
 @import 'pages/welcome';
 @import 'pages/error';
