--- a/server/views/unauthorized.pug
+++ b/server/views/unauthorized.pug
@@ -8,6 +8,10 @@ block body
           img.animated.fadeIn(src='/svg/icon-delete-shield.svg', alt='Unauthorized')
           .headline= t('unauthorized.title')
           .subheading.mt-3= t('unauthorized.action.' + action)
-          v-btn.mt-5(color='red lighten-4', href='javascript:window.history.go(-1);', large, outline)
-            v-icon(left) arrow_back
-            span= t('unauthorized.goback')
+          .mt-5
+            v-btn(color='red lighten-4', href='javascript:window.history.go(-1);', large, outline)
+              v-icon(left) arrow_back
+              span= t('unauthorized.goback')
+            v-btn(color='red lighten-4', href='/login', large, outline)
+              v-icon(left) person_outline
+              span= t('unauthorized.login')
