fix: UI improvements

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -2,9 +2,10 @@
 
 @import "base/base";
 @import "base/icons";
+@import "base/animation";
 
-@import "../libs/animate/animate";
-@import '~vue2-animate/src/sass/vue2-animate';
+// @import "../libs/animate/animate";
+// @import '~vue2-animate/src/sass/vue2-animate';
 @import '~vuescroll/dist/vuescroll.css';
 @import '~diff2html/dist/diff2html.min.css';
 
