--- a/client/scss/components/v-dialog.scss
+++ b/client/scss/components/v-dialog.scss
@@ -1,7 +1,7 @@
 .dialog-header {
   background-color: mc('blue', '700');
-  background: radial-gradient(ellipse at top, mc('blue', '500'), mc('blue', '700')),
-            radial-gradient(ellipse at bottom, mc('blue', '800'), mc('blue', '700'));
+  background-image: radial-gradient(ellipse at top, mc('blue', '500'), mc('blue', '700')),
+                    radial-gradient(ellipse at bottom, mc('blue', '800'), mc('blue', '700'));
   height: 60px;
   color: #FFF;
   display: flex;
@@ -11,19 +11,19 @@
 
   &.is-red {
     background-color: mc('red', '700');
-    background: radial-gradient(ellipse at top, mc('red', '500'), mc('red', '700')),
-              radial-gradient(ellipse at bottom, mc('red', '800'), mc('red', '700'));
+    background-image: radial-gradient(ellipse at top, mc('red', '500'), mc('red', '700')),
+                      radial-gradient(ellipse at bottom, mc('red', '800'), mc('red', '700'));
   }
 
   &.is-indigo {
     background-color: mc('indigo', '700');
-    background: radial-gradient(ellipse at top, mc('indigo', '500'), mc('indigo', '700')),
-              radial-gradient(ellipse at bottom, mc('indigo', '800'), mc('indigo', '700'));
+    background-image: radial-gradient(ellipse at top, mc('indigo', '500'), mc('indigo', '700')),
+                      radial-gradient(ellipse at bottom, mc('indigo', '800'), mc('indigo', '700'));
   }
 
   &.is-dark {
     background-color: mc('grey', '900');
-    background: radial-gradient(ellipse at top, mc('grey', '800'), mc('grey', '900')),
-              radial-gradient(ellipse at bottom, mc('grey', '800'), mc('grey', '900'));
+    background-image: radial-gradient(ellipse at top, mc('grey', '800'), mc('grey', '900')),
+                      radial-gradient(ellipse at bottom, mc('grey', '800'), mc('grey', '900'));
   }
 }
