--- a/client/scss/base/icons.scss
+++ b/client/scss/base/icons.scss
@@ -9,7 +9,7 @@
 }
 
 .material-icons {
-  font-family: 'Material Icons';
+  font-family: 'Material Icons', sans-serif;
   font-weight: normal;
   font-style: normal;
   font-size: 24px;  /* Preferred icon size */
