feat: image decoration classes

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -482,6 +482,12 @@
       top: -80px;
       right: 1rem;
     }
+    &.decor-shadow {
+      box-shadow: 0 3px 8px 0 rgba(116, 129, 141, 0.1);
+    }
+    &.decor-outline {
+      border: 1px solid mc('grey', '400');
+    }
   }
 
 }
