fix: image max-width

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -464,6 +464,8 @@
   // ---------------------------------
 
   img {
+    max-width: 100%;
+
     &.align-left {
       float: left;
       margin: 0 1rem 1rem 0;
