fix: page source id + font

--- a/server/views/source.pug
+++ b/server/views/source.pug
@@ -5,7 +5,7 @@ block head
 block body
   #root
     page-source(
-      page-id=page.id
+      :page-id=page.id
       locale=page.localeCode
       path=page.path
       )= page.content
